...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/game_pause_btn"
        layout="@layout/card_btn"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"

        app:layout_constraintBottom_toTopOf="@+id/game_exit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/game_timer_tv"
        android:layout_width="wrap_content"
...
