...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/start_number_btn"
        layout="@layout/card_btn"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintBottom_toTopOf="@+id/start_picture_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/start_picture_btn"
        layout="@layout/card_btn"
...
