...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/m_blue_primary_darker"
    tools:context=".MainActivity">

    <include
        android:id="@+id/main_start_btn"
        layout="@layout/card_btn"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0"
        app:srcCompat="@drawable/n9" />

    <ImageView
        android:id="@+id/main_logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_logo_iv_desc"
        app:layout_constraintEnd_toEndOf="parent"
...
